<resources>
    <string name="action_login">Login</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_activity_login">Login</string>
    <string name="login_title">Login to Vanish</string>
    <string name="hint_username">Username</string>
    <string name="authenticate">Authenticate</string>
    <string name="hint_password">Password</string>
    <string name="info_device_key">Device Key Not Found</string>
    <string name="hint_device_key">Import Device Key</string>
    <string name="title_activity_signup">Signup</string>
    <string name="info_pick_username">Pick a Username</string>
    <string name="subtitle_pick_username">Your username is how friends\nadd you on Vanish</string>
    <string name="title_enter_password">Enter a Password</string>
    <string name="subtitle_password_info">Choose secure password\nfor your Vanish ID</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="hint_name">Name</string>
    <string name="title_activity_setup_profile">Setup Profile</string>
    <string name="title_activity_dashboard">Vanish</string>
    <string name="action_settings">Settings</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_chats">Chats</string>
    <string name="title_settings">Settings</string>
    <string name="start_secure_chat">Start Secure Chat</string>
    <string name="title_contact_details">Contact details</string>
    <string name="start_secure_call">Start Encrypted Call</string>
    <string name="start_secure_video_call">Start Encrypted Video Call</string>
    <string name="make_a_user_disappear">Make User Vanish</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="invite_friends">Share</string>
    <string name="about_and_help">About &amp; Help</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="backup_code">Backup Code</string>
    <string name="logout">Logout</string>
    <string name="title_activity_create_group_chat">Select a Contact</string>
    <string name="hint_group_name">Group Name</string>
    <string name="empty_username">Username can\'t be empty</string>
    <string name="username_exists">Username %s already exists</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="wrong_usr_or_pwd">Wrong username or password</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="signup_success">Sign up successful!</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="search_friend_hint">Search for a friend</string>
    <string name="title_friend_search">Search for a Friend</string>
    <string name="add">Add</string>
    <string name="no_search_results">No search results</string>
    <string name="friend_invited">Friend %s invited</string>
    <string name="generic_network_error">Something went wrong</string>
    <string name="network_error">Network connection problem</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="pick">Pick</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="profile_updated">Profile updated</string>
    <string name="title_message_list">Messages</string>
    <string name="hint_enter_a_message">Enter message</string>
    <string name="auto_logout">Logged out automatically</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pending">Pending</string>
    <string name="cancel_invite">Cancel Invite</string>
    <string name="skip">Skip (Stay Anonymous)</string>
    <string name="failure_message_build">Failed to build encrypted message</string>
    <string name="disappear_message">Vanish message</string>
    <string name="failure_message_deletion">Error deleting message on server</string>
    <string name="disappear_all_messages">Vanish All Messages</string>
    <string name="make_user_disappear">Make User Vanish</string>
    <string name="friend_deleted_message">Friend %s deleted message</string>
    <string name="call">Call</string>

    <plurals name="last_modified">
        <item quantity="one">%1$d %2$s ago</item>
        <item quantity="other">%1$d %2$ss ago</item>
    </plurals>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="feedback_subject">Vanish App Feedback!</string>
    <string name="username">\@%s</string>
    <string name="hint_displayname">Edit profile to change display name</string>
    <string name="send_photo">Send photo</string>
    <string name="new_picture">New picture!</string>
    <string name="connection_service_label">Disappears Connection Service</string>
    <string name="video_call">Video call</string>
    <string name="title_activity_create_chat">Create a Talk</string>
    <string name="new_group">New Group</string>
    <string name="new_channel">New Channel</string>
    <string name="new_audio_call">New Audio Call</string>
    <string name="new_video_call">New Video Call</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="vanish_secure_call">VANISH SECURE CALL</string>
    <string name="incoming_call">INCOMING CALL</string>
    <string name="incoming_audio_call">INCOMING AUDIO CALL</string>
    <string name="incoming_video_call">INCOMING VIDEO CALL</string>
    <string name="call_in_progress">Call in progress…</string>
    <string name="error_cannot_invite_yourself">Cannot add yourself</string>

    <plurals name="numberOfMessages">
        <item quantity="one">You have new secret message.</item>
        <item quantity="few">You have %d new secret messages.</item>
        <item quantity="other">You have %d new secret messages.</item>
    </plurals>

    <string name="help_username">Username must be at least 3 letters and cannot contain special charachters</string>
    <string name="error_username">Invalid username</string>
    <string name="error_name">Invalid name</string>
    <string name="help_name">Name must be at least 3 letters and cannot contain special charachters</string>

    <!--^[a-zA-Z0-9]-->
    <string name="regex_name">^[a-zA-Z ,.\'-]{3,50}$</string>
    <string name="regex_username">^[a-zA-Z0-9]{3,50}$</string>
    <string name="invalid_confirm_password">Invalid confirm password</string>
    <string name="help_confirm_password">Must be the same with password</string>
    <string name="regex_password">.{3,}</string>
    <string name="cannot_load_current_profile">Can\'t load current profile</string>
    <string name="help_password">Password must be at least 3 charachters</string>
    <string name="error_password">Invalid password</string>
    <string name="call_was_ended_by_another_user">Call was ended by other user</string>
    <string name="cannnot_load_image">Sorry, but I can\'t load image from this directory. Please try load from another one.</string>
    <string name="search_for_myself">User can not add himself to his friend list</string>
    <string name="address_book_contacts">ADDRESS BOOK CONTACTS</string>
    <string name="pending_contacts">PENDING CONTACTS</string>
    <string name="vanish_contacts">VANISH CONTACTS</string>
    <string name="no_contacts">No contacts</string>
    <string name="select_at_least_on">Please select eat least one contact</string>
    <string name="permission_is_denied">Permission is denied</string>
    <string name="call_permissions_is_denied">You need to accept Audio recording permission to start new call, please visit your app settings</string>
    <string name="restore_title">Restore Account</string>
    <string name="restore_description">In order to restore your account, please load your Vanish restoration file on this device. For more information visit vanish.im/help</string>
    <string name="title_fingerprint">Enable Touch ID</string>
    <string name="desc_fingerprint">Add an extra layer of authentication by using Touch ID when you access Vanish</string>
    <string name="note">Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="title_activity_help">How To Use</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="skiptouch">SKIP</string>
    <string name="enable_touchid">Enable Touch ID</string>
    <string name="disable_touchid">Disable Touch ID</string>
    <string name="enabled_touchid">Touch ID Enabled</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="TitleEnableDisableTouch">Touch ID for \"Vanish\"</string>
    <string name="identity_backup">Identity Backup</string>
    <string name="title_identity_backup">Enable Identity Backup</string>
    <string name="identity_backup_done">Identity Backup Done</string>
    <string name="desc_identity_backup">Backup your private keys securely, this allows you to recover your account</string>
    <string name="username_whitespaces">Username %s shouldn\'t contain whitespaces</string>
    <string name="username_length_invalid">Username %s is short</string>
</resources>
