<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/title_enter_password"
        android:textColor="@color/white"
        android:textSize="@dimen/font_22" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center"
        android:text="@string/subtitle_password_info"
        android:textColor="@color/lightGray"
        android:textSize="14sp" />

    <com.kucherenko.RxValidationTextInputLayout
        android:id="@+id/tilPassword"
        style="@style/LoginTextLayout"
        android:hint="@string/hint_password"
        app:error="@string/error_password"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
        app:help="@string/help_password"
        app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white"
        app:regex="@string/regex_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/LoginTextInput"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.kucherenko.RxValidationTextInputLayout>

    <com.kucherenko.RxValidationTextInputLayout
        android:id="@+id/tilRepeatPassword"
        style="@style/LoginTextLayout"
        android:hint="@string/hint_repeat_password"
        app:equalEditText="@id/etPassword"
        app:error="@string/invalid_confirm_password"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
        app:help="@string/help_confirm_password"
        app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepeatPassword"
            style="@style/LoginTextInput"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.kucherenko.RxValidationTextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible" />

</LinearLayout>
