<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/unread_indicator"
        android:scaleType="centerCrop"
        app:riv_border_color="@color/lightGreen"
        app:riv_border_width="2dp"
        app:riv_corner_radius="50dp" />

    <TextView
        android:id="@+id/tvChangeProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center"
        android:text="@string/change_profile_picture"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18" />

    <com.kucherenko.RxValidationTextInputLayout
        android:id="@+id/tilName"
        style="@style/LoginTextLayout"
        app:error="@string/error_name"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
        app:help="@string/help_name"
        app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
        app:regex="@string/regex_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            style="@style/LoginTextInput"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:maxLength="20" />

    </com.kucherenko.RxValidationTextInputLayout>

</LinearLayout>
