<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/picture_placeholder"
        android:scaleType="centerCrop"
        app:riv_border_color="@color/profileImageBorder"
        app:riv_border_width="2dp"
        app:riv_corner_radius="50dp" />

    <TextView
        android:id="@+id/secureChat"
        style="@style/contact_detail_button"
        android:text="@string/start_secure_chat" />

    <TextView
        android:id="@+id/secureCall"
        style="@style/contact_detail_button"
        android:text="@string/start_secure_call" />

    <TextView
        android:id="@+id/secureVideoCall"
        style="@style/contact_detail_button"
        android:text="@string/start_secure_video_call" />

    <TextView
        android:id="@+id/vanishUser"
        style="@style/contact_detail_button"
        android:text="@string/make_a_user_disappear" />


</LinearLayout>
