<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:background="@color/black"
            android:scaleType="centerCrop"
            app:riv_border_color="@color/lightGreen"
            app:riv_border_width="2dp"
            app:riv_corner_radius="35dp"
            app:riv_mutate_background="true" />

        <TextView
            android:id="@+id/tvUsername"
            style="@style/TextView"
            android:layout_alignTop="@id/ivProfilePicture"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_toEndOf="@id/ivProfilePicture"
            android:lines="1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDisplayName"
            style="@style/TextView"
            android:layout_height="36dp"
            android:layout_alignBottom="@id/ivProfilePicture"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_toEndOf="@id/ivProfilePicture"
            android:hint="@string/hint_displayname"
            android:lines="2"
            android:textColorHint="@color/lightGray" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvEditProfile"
        style="@style/TextView.Medium"
        android:layout_marginTop="@dimen/margin_24"
        android:lines="1"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        android:typeface="normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTouchId"
            style="@style/TextView.Medium"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/margin_24"
            android:lines="1"
            android:text="@string/enable_touchid"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/enableDisableSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:layout_marginStart="0dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/tvTouchId" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvBackup"
        style="@style/TextView.Medium"
        android:layout_marginTop="@dimen/margin_24"
        android:lines="1"
        android:text="@string/identity_backup"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvAbout"
        style="@style/TextView.Medium"
        android:layout_marginTop="@dimen/margin_24"
        android:lines="1"
        android:text="@string/about"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvHelp"
        style="@style/TextView.Medium"
        android:layout_marginTop="@dimen/margin_24"
        android:lines="1"
        android:text="@string/help"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvFeedback"
        style="@style/TextView.Medium"
        android:layout_marginTop="@dimen/margin_24"
        android:lines="1"
        android:text="@string/send_feedback"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvInviteFriends"
        style="@style/TextView.Medium"
        android:layout_marginTop="@dimen/margin_24"
        android:lines="1"
        android:text="@string/invite_friends"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvLogout"
        style="@style/TextView.Medium"
        android:layout_marginTop="@dimen/margin_24"
        android:lines="1"
        android:text="@string/logout"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

</LinearLayout>
