<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/info_pick_username"
        android:textColor="@color/white"
        android:textSize="@dimen/font_22" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center"
        android:text="@string/subtitle_pick_username"
        android:textColor="@color/lightGray"
        android:textSize="14sp" />

    <com.kucherenko.RxValidationTextInputLayout
        android:id="@+id/tilUserName"
        style="@style/LoginTextLayout"
        android:hint="@string/hint_username"
        app:error="@string/error_username"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
        app:help="@string/help_username"
        app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
        app:regex="@string/regex_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            style="@style/LoginTextInput"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

    </com.kucherenko.RxValidationTextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="By signing up you agree to our"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtTos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text=" Terms of Service"
            android:textColor="@color/lightGreen" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible" />

</LinearLayout>
