<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_device_key"
        android:textColor="@color/white"
        android:textSize="@dimen/font_22" />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/LoginTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deviceKey"
            style="@style/LoginTextInput"
            android:hint="@string/hint_device_key" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/authenticate"
        android:layout_width="@dimen/onboarding_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/button_light_green"
        android:text="@string/authenticate"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18" />

</LinearLayout>
