<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.disappears.android.flow.fingerprint.ThumbVerification">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/DarkAppBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/skiptouch"
                android:textColor="@color/lightGreen" />

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/activity_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_fingerprint"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/desc_fingerprint"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <ImageView
                android:id="@+id/icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:paddingTop="2dp"
                android:src="@drawable/ic_launcher" />

            <Button
                android:id="@+id/selectFingerPrintButton"
                android:layout_width="@dimen/enable_touch_id_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/button_light_green"
                android:text="@string/enable_touchid"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="26dp"
            android:text="@string/note"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
